# wsunflower

./: CMakeLists.txt  Makefile  README.md  WARNING  makemeta.py  sunflower.c  sunflower.h  todos.txt
InstructionParser/: expr_t.c  expr_t.h  ipsf_init.c  ipsf_init.h
Lib/: exception.sf
Lib/algorithm/: __main__.sf  linkedlist.sf  range.sf
Lib/algorithm/tree/: __main__.sf  binarytree.sf  bst.sf
Lib/array/: __main__.sf
Lib/iter/: __main__.sf
Lib/json/: __main__.sf  decoder.sf  encoder.sf
Lib/std/: __main__.sf  dict.sf  string.sf
Lib/type/: __main__.sf
Lib/xml/: __main__.sf
Object/: osf_cmd.c  osf_cmd.h  osf_except.c  osf_except.h  osf_mem.c  osf_mem.h
Parser/: array_t.c  array_t.h  dict_t.c  dict_t.h  hashtable.c  hashtable.h  psf_byte_t.c  psf_byte_t.h  psf_gen_ast.c  psf_gen_ast.h  psf_gen_ast_preprocessor.c  psf_gen_ast_preprocessor.h  psf_gen_inst_ast.c  psf_gen_inst_ast.h  str.c  str.h  trie.c  trie.h
builtins/: built_in.c  built_in.h
tests/: CMakeLists.txt  dtype_overloads.sf  inheritance_test.sf  iter_example.sf  notes.txt  other.sf  test.c  test.sf
tests/hashtest/: CMakeLists.txt  test.c
tests/trietest/: CMakeLists.txt  test.c
